# pilot2

./: .gitignore  CoordinateSystems.md  README.md  Readme.md
BSP/: README.MD  Resources.cpp  Resources.h
BSP/SIL_win32/: dummy.cpp
BSP/androidUAV/: dummy.cpp
BSP/devices/: Frames of Reference - PX4 Autopilot Project.html  IAccelerometer.h  IBarometer.h  IBatteryVoltage.h  IFlow.h  IGPS.h  IGyro.h  ILED.h  IMagnetometer.h  IRGBLED.h  IRawDevice.h
HAL/: Resources.cpp  Resources.h
HAL/Interface/: ADC.h  AnalogIn.h  GPIO.h  HAL.h  I2C.h  I2C_SW.cpp  IADC.h  IAccelerometer.h  IAsyncWorker.h  IBarometer.h  IBatteryVoltage.h  IBlockDevice.h  ICamera.h  ICriticalSection.h  IFIFO.h  IFlow.h  IGPIO.h  IGPS.h  II2C.h  IInterrupt.h  (+21 more)
Project/: main.c  main.cpp
binary_release/: rkPilotEXE
modules/: ahrs.cpp  altitude_controller.cpp  altitude_controller.h  altitude_estimator.h  altitude_estimatorCF.h  log.cpp  of_controller.cpp  pos_estimator.cpp  pos_estimator.h  uwb.cpp  uwb.h
modules/sx1280_sens/libsx128x/: CMakeLists.txt  README.md  port2.cpp
modules/sx1280_sens/libsx128x/lib/: RangingCorrection.h  radio.h  readme.md  sx1280-hal.c  sx1280-hal.h  sx1280-radio.c  sx1280.c  sx1280.h  sx128x.cmake
modules/sx1280_sens/libsx128x/lib/rangingCorrection/: rangingCorrectionSF10BW0400.h  rangingCorrectionSF10BW0800.h  rangingCorrectionSF10BW1600.h  rangingCorrectionSF5BW0800.h  rangingCorrectionSF6BW0400.h  rangingCorrectionSF6BW0800.h  rangingCorrectionSF7BW0400.h  rangingCorrectionSF8BW0800.h  rangingCorrectionSF9BW0800.h
modules/sx1280_sens/libsx128x/src/: main.cpp
(+1422 files in other folders)
